--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
+  <h5>"Spacing" , "Blur", and "Base color" are my three variables.</h5>
 
   <div class="controls">
     <label for="spacing">Spacing:</label>
@@ -21,6 +22,22 @@
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
   <style>
+
+  :root {
+    --base: #ffc600;
+    --spacing: 10px;
+    --blur: 10px;
+  }
+
+  img {
+    padding-left: var(--spacing);
+    background: var(--base);
+    filter: blur(var(--blur));
+  }
+
+  .h1 {
+    color: var(--base);
+  }
 
     /*
       misc styles, nothing to do with CSS variables
