--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -65,9 +65,10 @@
   const inputs = document.querySelectorAll('.controls input');
 
   function handleUpdate() {
-   // const suffix = this.dataset.sizing || '';
+   const suffix = this.dataset.sizing || '';
+   document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
    // console.log(suffix);
-   console.log(this.name);
+   // console.log(this.name);
   }
 
   inputs.forEach(input => input.addEventListener('change', handleUpdate));
