Most of day 4 done.

--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -12,7 +12,7 @@
     // Get your shorts on - this is an array workout!
     // ## Array Cardio Day 1
 
-    // Some data we can work with
+    // Some data we can work with 
 
     const inventors = [
       { first: 'Albert', last: 'Einstein', year: 1879, passed: 1955 },
@@ -43,23 +43,18 @@
 
     // Array.prototype.sort()
     // 3. Sorting oldest inventor by birthdate, oldest to youngest
-    // const ordered = inventors.sort(function(a, b) {
-    //   if(a.year > b.year){
-    //     return 1;
-    //   } else {
-    //     return -1;
-    //   }
-    // });
-
+    
     const ordered = inventors.sort((a, b) => a.year > b.year ? 1 : -1 );
     console.table(ordered);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
-    const totalYears = inventors.reduce((total, inventor) => {
-      return total + (inventor.passed - inventor.year);
+    const totalYearsLives = inventors.reduce((total, inventor) => {
+    	return total + (inventor.passed - inventor.year);
+
     }, 0);
-    console.log(totalYears);
+    console.log(totalYearsLives);
+
 
     // 5. Sort the inventors by years lived
     const lifeSpan = inventors.sort(function(a,b) {
@@ -71,13 +66,9 @@
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-    // const category = document.querySelector('.mw-category');
-    // const links = Array.from(category.querySelectorAll('a'));
-    // const de = links
-    //               .map(link => linkContent)
-    //               .filter(streetName => streetName.includes('de'));
-    //
-    //
+
+
+
     // // 7. sort Exercise
     // Sort the people alphabetically by last name
     const aplphabet = people.sort((lastOne, nextOne) => {
