--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -66,17 +66,22 @@
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+    // const category = document.querySelector('.mw-category');
+    // const links = Array.from(category.querySelectorAll('a'));
+    // const de = links
+    // 			.map(link => link.textContent)
+    // 			.filter(streetName => streetName.includes('de'));
 
 
+// const links = [...category.querySelectorAll('a')];
 
     // // 7. sort Exercise
     // Sort the people alphabetically by last name
-    const aplphabet = people.sort((lastOne, nextOne) => {
-      const [aLast, aFirst] = lastOne.split(', ');
-      const [bLast, bFirst] = nextOne.split(', ');
-      return aLast > bLast ? 1: -1;
+    const alpha = people.sort(function(lastOne, nextOne) {
+    	const [last, first] = lastOne.split(', ');
+    	console.log(last, first);
     });
-    console.log(aplphabet);
+
 
 
     // 8. Reduce Exercise
