--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -20,10 +20,11 @@
     *, *:before, *:after {
       box-sizing: inherit;
     }
-
+    /*Flex Children */
     .panels {
       min-height:100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -32,8 +33,6 @@
       color:white;
       text-align: center;
       align-items:center;
-      /* Safari transitionend event.propertyName === flex */
-      /* Chrome + FF transitionend event.propertyName === flex-grow */
       transition:
         font-size 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
         flex 0.7s cubic-bezier(0.61,-0.19, 0.7,-0.11),
@@ -41,6 +40,10 @@
       font-size: 20px;
       background-size:cover;
       background-position:center;
+      display: flex;
+      flex: 1;
+      flex-direction: column;
+   
     }
 
 
@@ -54,7 +57,17 @@
       margin:0;
       width: 100%;
       transition:transform 0.5s;
+      /*border: 1px solid red;*/
+      flex: 1 0 auto;
+      display: flex;
+      justify-content: center;
+      alight-items: center;
     }
+
+    .panel > *:first-child { transform: translateY(-100%); }
+    .panel.open-active > *:first-child { transform: translateY(0); }
+    .panel > *:last-child { transform: translateY(100%); }
+    .panel.open-active > *:last-child { transform: translateY(0); }
 
     .panel p {
       text-transform: uppercase;
@@ -67,6 +80,7 @@
     }
 
     .panel.open {
+    	flex: 5;
       font-size:40px;
     }
 
@@ -102,6 +116,23 @@
   </div>
 
   <script>
+  	const panels = document.querySelectorAll('.panel');
+
+  	function toggleOpen() {
+  		console.log('hello');
+  		this.classList.toggle('open');
+  	}
+
+  	function toggleActive(e) {
+  		console.log(e.propertyName);
+  		if (e.propertyName.includes('flex')) {
+  				this.classList.toggle('open-active');
+  		}   	
+  	}
+
+
+  	panels.forEach(panel => panel.addEventListener('click', toggleOpen));
+  	panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
 
   </script>
 
