--- a/14 - JavaScript References VS Copying/index-START.html
+++ b/14 - JavaScript References VS Copying/index-START.html
@@ -8,13 +8,18 @@
 
   <script>
     // start with strings, numbers and booleans
+    let age
 
     // Let's say we have an array
-    const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
+    const players = ['Wes', 'Sarah', 'Ryan', 'Poppy', 'Anthony'];
 
     // and we want to make a copy of it.
+    const team = players;
+
+    console.log(players, team);
 
     // You might think we can just do something like this:
+    // team[3] = 'lux';
 
     // however what happens when we update that array?
 
@@ -25,30 +30,59 @@
     // Why? It's because that is an array reference, not an array copy. They both point to the same array!
 
     // So, how do we fix this? We take a copy instead!
+    const team2 = players.slice();
 
     // one way
 
     // or create a new array and concat the old one in
 
-    // or use the new ES6 Spread
+    // or use the new ES6 Spread(spread takes out every item of the iterable and puts it into the containing array).
+    const team4 = [...players];
+    team4[3] = 'hee hawww';
+    console.log(team4);
+
+    const team5 = Array.from(players);
 
     // now when we update it, the original one isn't changed
 
     // The same thing goes for objects, let's say we have a person object
 
     // with Objects
+
     const person = {
       name: 'Wes Bos',
       age: 80
     };
 
+    const person1 = {
+      name: 'Wes Bos',
+      age: 80
+    };
     // and think we make a copy:
-
     // how do we take a copy instead?
+    const cap2 = Object.assign({}, person, {name : 'Anthony', number: 93, age: 25});
+    console.log(cap2);
 
     // We will hopefully soon see the object ...spread
+    const cap3 = {...person};
 
     // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
+
+    const wes = {
+      name: 'Wes',
+      age: 100,
+      social: {
+        twitter: '@wesbos',
+        facebook: 'wesbos.developer'
+      }
+    };
+
+    console.clear();
+    console.log(wes);
+
+    const dev = Object.assign({}, wes);
+
+    //you can also look into the 'deep clone' function, which allows a full copy of the object. 
 
   </script>
 
