--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -19,6 +19,7 @@
     <ul class="plates">
       <li>Loading Tapas...</li>
     </ul>
+    <!--by default a form is going to load the page or send the data to an external source -->
     <form class="add-items">
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
@@ -28,7 +29,59 @@
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = [];
+  const items = JSON.parse(localStorage.getItem('items')) || [];
+
+  //here we need to create a function that adds to the list
+  function addItem(e) {
+  	e.preventDefault();
+    const text = (this.querySelector('[name=item]')).value;   //value is whatever the user has typed into it
+    const item = {
+      text,
+      done: false
+    };
+
+
+
+
+
+//https://courses.wesbos.com/account/access/5b5e4d5199ce1f5578c24f6c/view/194129092
+
+//paused at 14:20
+
+
+
+
+  	items.push(item);
+    populateList(items, itemsList); 
+    localStorage.setItem('items', JSON.stringify(items));
+  	//now we need to clear the input (value)
+  	this.reset();
+  }
+
+  //now we need to create a function that populates the list
+  function populateList(plates = [], platesList) {
+    //loop over every single item in an array
+    //map takes in an array of raw data and returns an array of some other data
+    platesList.innerHTML = plates.map((plate, i) => {
+      return `
+        <li>
+
+       <!-- NOTICE HOW THE ID AND THE FOR ARE THE EXACT SAME THING, THIS IS HOW WE LINK THE TWO.   -->
+
+          <input type="checkbox" data-index=${i} id=${"i"} ${plate.done ? 'checked' : ''} />
+
+       <!-- When you input on the label, the item will check itself  -->
+
+          <label for="item${i}">${plate.text}</label>
+        </li>
+      `;
+    }).join('');
+
+  }
+
+  addItems.addEventListener('submit', addItem);
+
+  populateList(items, itemList);
 
 </script>
 
