--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <!--
       Fish SVG Cred:
       https://thenounproject.com/search/?q=fish&i=589236
@@ -24,12 +25,20 @@
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
     </form>
+    <form class="checkAll-items">
+      <input type="submit" value="Check All Items">
+    </form>
+    <form class="uncheckAll-items">
+      <input type="submit" value="Clear All Items">
+    </form>
   </div>
 
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
   const items = JSON.parse(localStorage.getItem('items')) || [];
+
+
 
   //here we need to create a function that adds to the list
   function addItem(e) {
@@ -40,52 +49,89 @@
       done: false
     };
 
-
-
-
-
 //https://courses.wesbos.com/account/access/5b5e4d5199ce1f5578c24f6c/view/194129092
-
 //paused at 14:20
 
-
-
-
   	items.push(item);
-    populateList(items, itemsList); 
+    populateList(items, itemsList);
     localStorage.setItem('items', JSON.stringify(items));
   	//now we need to clear the input (value)
   	this.reset();
   }
 
-  //now we need to create a function that populates the list
+  //NOW WE NEED TO CREATE A FUNCTION THAT POPULATES THE LIST
   function populateList(plates = [], platesList) {
     //loop over every single item in an array
     //map takes in an array of raw data and returns an array of some other data
     platesList.innerHTML = plates.map((plate, i) => {
       return `
         <li>
-
-       <!-- NOTICE HOW THE ID AND THE FOR ARE THE EXACT SAME THING, THIS IS HOW WE LINK THE TWO.   -->
-
-          <input type="checkbox" data-index=${i} id=${"i"} ${plate.done ? 'checked' : ''} />
+        <!-- NOTICE HOW THE ID AND THE FOR ARE THE EXACT SAME THING, THIS IS HOW WE LINK THE TWO. -->
+          <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''} />
 
        <!-- When you input on the label, the item will check itself  -->
-
           <label for="item${i}">${plate.text}</label>
         </li>
       `;
     }).join('');
+  }
+
+  function toggleDone(e) {
+    if (!e.target.matches('input')) return;  //skip this unless it's an input
+    const el = e.target;
+    console.log(el.dataset.index);// finding the correct path to the indexed item.
+    const index = el.dataset.index;
+    items[index].done = !items[index].done;  //change the property
+    localStorage.setItem('items', JSON.stringify(items)); //update local storage
+    populateList(items, itemsList); //populate the list on page
 
   }
 
   addItems.addEventListener('submit', addItem);
+  itemsList.addEventListener('click', toggleDone);
 
-  populateList(items, itemList);
+  populateList(items, itemsList);
+
+
+/*  CHALLENGE IS TO MAKE A BUTTONS THAT CHECK ALL ITEMS AND CLEAR ALL ITEMS  */
+
+function checkAll(e) {
+  console.log(e);
+  if (!items[index].done === true) {
+    !items[index].done = items[index].done;
+  }
+  localStorage.setItem('items', JSON.stringify(items)); //update local storage
+  populateList(items, itemsList);
+}
+
+itemsList.addEventListener('click', checkAll);
+
+
+
+function uncheckAll(e) {
+  console.log(e.target);
+  if (items[index].done === true); {
+    items[index].done = !items[index].done;
+  }
+  localStorage.setItem('items', JSON.stringify(items)); //update local storage
+  populateList(items, itemsList);
+}
+
+itemsList.addEventListener('click', uncheckAll);
+
+
+
+
+
+
+
+
+
+
+
+
 
 </script>
 
-
 </body>
 </html>
-
