--- a/16 - Mouse Move Shadow/index-start.html
+++ b/16 - Mouse Move Shadow/index-start.html
@@ -35,6 +35,37 @@
   </style>
 
 <script>
+  const hero = document.querySelector('.hero');
+  const text = hero.querySelector('h1');
+  const walk = 100; //100px
+
+  function shadow(e) {
+
+    //first thing we want to do, is get the width and height of the hero class. 
+    const { offsetWidth: width, offsetHeight: height } = hero;
+    let { offsetX: x, offsetY: y } = e;
+
+    //  you will see that this = hero  & target = h1
+    if(this !== e.target) {
+      x = x + e.target.offsetLeft;
+      y = y + e.target.offsetTop;
+    }
+ //  if 100 is the hightes is the highest we can go, -50 is the 
+  const xWalk = (x / width * walk) - (walk / 2);
+  const yWalk = (y / height * walk) - (walk / 2);
+
+  //the 0 is blur
+  text.style.textShadow = `
+    ${xWalk}px ${yWalk}px 0 red,
+    ${xWalk * -1}px ${yWalk}px 0 blue,
+    ${xWalk}px ${yWalk * -1}px 0 green  
+  `;
+
+  }
+
+  hero.addEventListener('mousemove', shadow);
+
+
 </script>
 </body>
 </html>
