--- a/18 - Adding Up Times with Reduce/index-START.html
+++ b/18 - Adding Up Times with Reduce/index-START.html
@@ -177,11 +177,41 @@
     <li data-time="1:56">
       Video 57
     </li>
-    <li data-time="4:04">
+    <li data-time="4:06">
       Video 58
     </li>
   </ul>
 <script>
+
+  const timeNodes = [...document.querySelectorAll('[data-time]')];
+
+  const seconds = timeNodes
+      .map(node => node.dataset.time)
+      .map(timeCode => {
+        const [mins, secs] = timeCode.split(':').map(parseFloat);
+        return (mins * 60) + secs;
+        console.log(mins, secs);
+      })
+      .reduce((total, secondsPassed) =>  total + secondsPassed);
+
+  console.log(timeNodes);
+  console.clear();
+
+  let secondsLeft  = seconds;
+  const hours = Math.floor(secondsLeft / 3600);
+  secondsLeft = secondsLeft % 3600;
+
+  const mins = Math.floor(secondsLeft / 60);
+  secondsLeft = secondsLeft % 60;
+
+  secondsLeft = secondsLeft % 60;
+
+
+  console.log(hours, mins, secondsLeft);
+
+
+
+
 </script>
 </body>
 </html>
