Completed day 23: Speech Synthesis

--- a/23 - Speech Synthesis/index-START.html
+++ b/23 - Speech Synthesis/index-START.html
@@ -1,41 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Speech Synthesis</title>
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-    <div class="voiceinator">
+  <div class="voiceinator">
 
-      <h1>The Voiceinator 5000</h1>
+    <h1>The Voiceinator 5000</h1>
 
-      <select name="voice" id="voices">
-        <option value="">Select A Voice</option>
-      </select>
+    <select name="voice" id="voices">
+      <option value="">Select A Voice</option>
+    </select>
 
-      <label for="rate">Rate:</label>
-      <input name="rate" type="range" min="0" max="3" value="1" step="0.1">
+    <label for="rate">Rate:</label>
+    <input name="rate" type="range" min="0" max="3" value="1" step="0.1">
 
-      <label for="pitch">Pitch:</label>
+    <label for="pitch">Pitch:</label>
 
-      <input name="pitch" type="range" min="0" max="2" step="0.1">
-      <textarea name="text">Hello! I love JavaScript 👍</textarea>
-      <button id="stop">Stop!</button>
-      <button id="speak">Speak</button>
+    <input name="pitch" type="range" min="0" max="2" step="0.1">
+    <textarea name="text">your daughter come over here and kick my dog</textarea>
+    <button id="stop">Stop!</button>
+    <button id="speak">Speak</button>
 
-    </div>
+  </div>
 
-<script>
-  const msg = new SpeechSynthesisUtterance();
-  let voices = [];
-  const voicesDropdown = document.querySelector('[name="voice"]');
-  const options = document.querySelectorAll('[type="range"], [name="text"]');
-  const speakButton = document.querySelector('#speak');
-  const stopButton = document.querySelector('#stop');
-</script>
+  <script>
+    const msg = new SpeechSynthesisUtterance();
+    //wer create an empty array for all the voices
+    let voices = [];
+    const voicesDropdown = document.querySelector('[name="voice"]');
+    const options = document.querySelectorAll('[type="range"], [name="text"]');
+    const speakButton = document.querySelector('#speak');
+    const stopButton = document.querySelector('#stop');
+
+    msg.text = document.querySelector('[name="text"]').value;
+    function populateVoices() {
+      voices = this.getVoices();
+      console.log(voices);
+      //now we want to loop over all of the voices and put them in the dropdown
+      voicesDropdown.innerHTML = voices
+        //from here we are going to return a voice option where the value is voice.name
+        //We can filter the languages too
+        .filter(voice => voice.lang.includes('en'))
+        .map(voice => `<option value="${voice.name}">${voice.name} (${voice.lang})</option>`)
+        .join('');
+
+    }
+
+    function setVoice() {
+      // console.log(this.value);
+      /*This loops over every single one of the voices in the array
+      and it finds the one where it's name attribute it the same as the
+      option that was just selected */
+      msg.voice = voices.find(voice => voice.name === this.value);
+      toggle();
+    }
+
+    //Now I want to make a function that restarts the voice when i change to another voice
+    function toggle(startOver = true) {
+      speechSynthesis.cancel();
+      if (startOver) {
+        speechSynthesis.speak(msg);
+      }
+    }
+
+    function setOption() {
+      console.log(this.name, this.value);
+      //we take out message and set the property value to whatever changed
+      msg[this.name] = this.value;
+      toggle();
+    }
+
+
+    speechSynthesis.addEventListener('voiceschanged', populateVoices);
+    voicesDropdown.addEventListener('change', setVoice);
+    options.forEach(option => option.addEventListener('change', setOption));
+    speakButton.addEventListener('click', toggle);
+
+    // stopButton.addEventListener('click', toggle.bind(null, false));
+    //               OR
+    stopButton.addEventListener('click', () => toggle(false));
+  </script>
 
 </body>
+
 </html>
