Completed day 25: Event Capture, Propagation. Bubbling, and Once

--- a/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
+++ b/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
@@ -61,6 +61,9 @@ divs.forEach(div => div.addEventListener('click', logText, {
 // unbinding is the same thing as doing this
 // div.removeEventListener('clic', logText, capture? boolean);
 
+
+
+//USEFULL FOR APPLICATIONS THAT HAVE A CHECKOUT SECTION 
 button.addEventListener('click', () =>  {
   console.log('CLICK!!!!');
 }, {
