Completed day 28: Video Speed Controller

--- a/28 - Video Speed Controller/index-START.html
+++ b/28 - Video Speed Controller/index-START.html
@@ -15,6 +15,31 @@
   </div>
 
 <script>
+  const speed = document.querySelector('.speed');
+  const bar = speed.querySelector('.speed-bar');
+  const video = document.querySelector('.flex');
+
+  speed.addEventListener('mousemove', function(e) {
+    
+    const y = e.pageY - this.offsetTop;
+    // console.log(y);
+    const percent = y / this.offsetHeight;
+    //now we need a min and a max
+    const min = 0.4;
+    const max = 4;
+    const height = Math.round(percent * 100) + '%';
+    // console.log(height);
+    const playbackRate = percent * (max - min) + min;
+    bar.style.height = height;
+    // WE USE toFixed() to give us 2 decimal places
+    bar.textContent = playbackRate.toFixed(2) + 'x';
+    // console.log(playbackRate);
+    // console.log(percent);
+    //  WE GOTTA TAKE THE playbackRate VALUE AND APPLY IT
+    video.playbackRate = playbackRate;
+    
+  });
+
 </script>
 </body>
 </html>
